# LLM_chatbot_with_RAG

./: README.md  example.py  pyproject.toml
data/: generate_vector_store.py
src/: app.py
src/utils/: rag_llm.py
