[project]
name = "llm-chatbot-with-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Aqila Farahmand",email = "aqila.farahmand@unibo.it"}
]
license = {text = "Apache License"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "openai (>=1.70.0,<2.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "pypdf (>=5.4.0,<6.0.0)",
    "chromadb (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
